--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -114,7 +114,7 @@
           </div>
           <div class="col-3">
             <div class="text-center">
-              <img class="mx-auto d-block" src="/static/img/AsuPay.png" height="200">
+              <img class="mx-auto d-block" src="/static/img/AsuPay200.png" height="200">
             </div>
           </div>
           <div class="col-3">
