--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -17,7 +17,7 @@
 }
 
 .form-card .pay {
-	font-weight: bold;
+	font-weight: 400;
 }
 
 .form-card input, .form-card textarea {
@@ -110,14 +110,14 @@
 
     <div class="card-header">
       <div class="row">
-          <div class="col-4">
+          <div class="col-4" style="padding: 0 0 0 0">
           </div>
-          <div class="col-4">
-            <div class="text-center" style="margin-left: -40px">
-              <img class="mx-auto d-block" src="/static/img/AsuPay180.png" height="180" width="180">
+          <div class="col-4 d-flex justify-content-center"  style="padding: 0 0 0 0; margin: 0 0 0 0px">
+            <div style="background-image: url('/static/img/AsuPay125.png'); width:125px; height: 125px; object-position: center">
+{#              <img class="mx-auto d-block" src="/static/img/AsuPay180.png" height="150" width="150">#}
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4" style="padding: 0 0 0 0; margin: 0 0 0 0">
           </div>
       </div>    
       <div class="row">
@@ -138,9 +138,9 @@
                 <div class="form-card">
                     <span {% if payment.status != 0 %}hidden{% endif %}>
                         <div class="row">
-                            <div class="col mx-auto text-center">
-                                <b><p style="margin-bottom: 0px">Ödəniş Cədvəli</p></b>
-                                <b><p>Hörmətli {{ payment.owner_name|default_if_none:"" }} ({{ payment.user_login }})</p></b>
+                            <div class="col mx-auto text-center" style="font-weight: 800">
+                                <p style="margin-bottom: 0px; ">Ödəniş Cədvəli</p>
+                                <p>Hörmətli {{ payment.owner_name|default_if_none:"" }} ({{ payment.user_login }})</p>
                             </div>
                         </div>
                         <div class="row">
