--- a/backend_deposit/templates/payment/test_send.html
+++ b/backend_deposit/templates/payment/test_send.html
@@ -3,7 +3,7 @@
 {% block content %}
       <div class="col-md-4 mx-auto">
         <a href="/invoice/?shop_id=1&order_id={{ uid }}&amount=300&user_login=some_name_user&pay_type=card-to-card">Новый card-to-card</a><br>
-      <a href="/invoice/?shop_id=1&order_id={{ uid }}&amount=300&user_login=some_name_user&pay_type=card-to-m10">Новый card-to-m10</a>
+      <a href="/invoice/?shop_id=1&order_id={{ uid }}&amount=5&owner_name=John Dou&user_login=user_22216456&pay_type=card-to-m10">Новый card-to-m10</a>
       </div>
 
 shop_id' , 'order_id', 'amount', 'pay_type'<br>
