--- a/backend_deposit/templates/payment/pay_result.html
+++ b/backend_deposit/templates/payment/pay_result.html
@@ -113,7 +113,7 @@ function yourFunction() {
 };
 
 function getStatus() {
-fetch('http://127.0.0.1:8000/api/payment_status/', {
+fetch('https://asu-payme.com/api/payment_status/', {
     method: 'POST',
     headers: {'Content-Type': 'application/json'},
     body: JSON.stringify({
